--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ list, ul {
   }
 </SCRIPT>
 
-    <div class="section">Skills</div>
+    <div class="section">Skills 123</div>
     <hr class="solid">
     <ul>
         <div style="margin: 0px 0px 0px -41px;">
